Fixed h1 sizing on smallest screen size

--- a/onlineform/css/styles.css
+++ b/onlineform/css/styles.css
@@ -353,7 +353,7 @@ label {
 	}
 
 	h1 {
-		font-size: 10vw;
+		font-size: 8vw;
 	}
 }
 
